--- a/Solutions/Exercise_Two.ipynb
+++ b/Solutions/Exercise_Two.ipynb
@@ -29,14 +29,8 @@
     "* Jupyter Notebook\n",
     "* Git and Github\n",
     "\n",
-    "### Key points\n",
-    "* Fair strong natural water drive mechanism.\n",
-    "* Wedge-shaped reservoir.\n",
-    "* Initial Conditions are at bubble point(P and T).\n",
-    "* No gas cap(m = 0).\n",
-    "\n",
     "### Aim\n",
-    "* To develop a computer program that will perform history matchingof the reservoir using the production and PVT data given."
+    "* To develop a computer program that will find the value of Z-factor using the production and PVT data given."
    ]
   },
   {
